Fixed displaying of projects on Safari
Changed flex layout to grid, added some graphical tweaks.

--- a/css/main.css
+++ b/css/main.css
@@ -314,7 +314,7 @@ section p {
 #projects .project-list {
 	display:grid;
 	grid-template-rows: 300px 200px 200px;
-	grid-template-columns: repeat(auto-fill,minmax(150px, 1fr));
+	grid-template-columns: 1fr 1fr;
 	grid-auto-flow:row;
 	list-style-type:none;
 	grid-gap:0.5em;
@@ -325,15 +325,14 @@ section p {
 .project a {
 	height:100%;
 	width:100%;
-	display:flex;
-	flex-direction:row;
+	display:grid;
 	align-items:center;
-	justify-content:center;
+	justify-items:center;
 	color:#263238;
 	width:100%;
 	background-color:#f0f0f0;
-	cursor: pointer;
-	outline: none;
+	cursor:pointer;
+	outline:none;
 	text-decoration:none;
 }
 .project-name {
